[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Actors/Modules/Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Enemies/InstantTurn.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Enemies/Shared/QuickEnemyDeath.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=4]
[ext_resource path="res://src/Sounds/HIT.wav" type="AudioStream" id=6]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Modules/Enemy/EnemyDamage.gd" type="Script" id=8]
[ext_resource path="res://src/Actors/Enemies/Small Bee/sbee.res" type="SpriteFrames" id=11]
[ext_resource path="res://src/Actors/Enemies/AI.gd" type="Script" id=14]
[ext_resource path="res://src/Actors/Enemies/Small Bee/BeePatrol.gd" type="Script" id=15]
[ext_resource path="res://src/Actors/Enemies/Small Bee/BeeAttack.gd" type="Script" id=16]

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 102, 86.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 13.5, 15.5 )

[sub_resource type="RectangleShape2D" id=48]

[node name="SmallBee" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )
max_health = 1.0

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 14 )
on_idle = [ NodePath("../BeePatrol") ]
on_see_player = [ NodePath("../BeeAttack") ]

[node name="vision" type="Area2D" parent="AI"]
visible = false
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="AI/vision"]
position = Vector2( 0, 1.5 )
shape = SubResource( 47 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 4 )
z_index = 1
frames = ExtResource( 11 )
animation = "idle"
frame = 1
playing = true
flip_h = true

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.5, 1.5 )
shape = SubResource( 15 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
scale = Vector2( 2, 2 )
rect = Rect2( -5, -5, 10, 10 )

[node name="area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
shape = SubResource( 48 )

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 8 )
max_freeze_hits = 1

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
stream = ExtResource( 6 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="EnemyDeath" parent="." instance=ExtResource( 3 )]

[node name="Turn" type="Node2D" parent="."]
script = ExtResource( 2 )
actions = [ "Event" ]

[node name="BeeAttack" type="Node2D" parent="."]
script = ExtResource( 16 )
actions = [ "Event" ]
animation = "prepare"

[node name="BeePatrol" type="Node2D" parent="."]
script = ExtResource( 15 )
conflicting_moves = [ "BeeAttack" ]
actions = [ "Event" ]
animation = "move"
ability_who_updates_patrol_area = NodePath("../BeeAttack")

[connection signal="body_entered" from="AI/vision" to="AI" method="_on_vision_body_entered"]
[connection signal="body_exited" from="AI/vision" to="AI" method="_on_vision_body_exited"]
